package model;

public class BladWiek extends Exception{

}
